# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  configuration.yml  spec.yml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yml  production.yml
migrations/: 20211223011548_create_subscriptions_table.sql
scripts/: init-db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
