[package]
edition = "2018"
name = "zero2prod"
version = "0.1.0"
[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-http = "=3.0.0-beta.16"
actix-web = "4.0.0-beta.15"
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] } 
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = [ "registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.6"
tracing-log = "0.1.2"
tracing-actix-web = " 0.5.0-beta.6"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.sqlx]
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]
version = "0.5.7"

[dev-dependencies]
actix-rt = "2"
once_cell = "1.9.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = "1"

[lib]
path = "src/lib.rs"
