[package]
edition = "2018"
name = "zero2prod"
version = "0.1.0"
[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-http = "=3.0.0-beta.16"
actix-web = "4.0.0-beta.15"
chrono = "0.4.15"
config = "0.11.0"
serde-aux = "1.0.1"
tracing-actix-web = " 0.5.0-beta.6"
tracing-bunyan-formatter = "0.1.6"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
log = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.sqlx]
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]
version = "0.5.7"

[dependencies.tracing]
features = ["log"]
version = "0.1"

[dependencies.tracing-subscriber]
features = ["registry", "env-filter"]
version = "0.2.12"

[dependencies.uuid]
features = ["v4"]
version = "0.8.1"

[dev-dependencies]
actix-rt = "2"
once_cell = "1.9.0"
tokio = "1"

[dev-dependencies.reqwest]
features = ["json"]
version = "0.11"

[lib]
path = "src/lib.rs"
